--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <p id="target">click to start!</p>
-  <p id="result">Finished! 10 seconds1</p>
+  <p id="result">1分間でクリアして成功体験をしよう！</p>
   <script src="js/main.js"></Script>
 </body>
 </html>
